--- a/src/Feature/PresentationVisualizer/code/sitecore modules/Web/PresentationVisualizer/style.css
+++ b/src/Feature/PresentationVisualizer/code/sitecore modules/Web/PresentationVisualizer/style.css
@@ -2,7 +2,7 @@
 }
 
 .node-name {
-  font-size: 24px;
+  font-size: 16px;
   padding-left: 5px;
   padding-right: 12px;
   margin-top: 12px;
@@ -17,7 +17,7 @@
     display: none;
 }
 
-.node-renderingParameters {
+.node-parameters {
   display: none;
 }
 
@@ -30,11 +30,15 @@
 }
 
 .node-wrapper {
-  border-radius: 5% !important;
-  padding: 0 !important;
-  display: flex !important;
-  flex-direction: row !important;
+    border-radius: 5% !important;
+    padding: 0 !important;
+    display: flex !important;
+    flex-direction: row !important;
+    color: #fff;
+    background-color: #565e64;
+    border-color: #51585e !important;
 }
+
 
 .bold {
   font-weight: 600;
